export interface IClientDTO {
    name: string
    email: string
    phoneNumber: string
    vatNumber: number
    password: string
}
