export interface ICreatedClientDTO {
    name: string
    email: string
    phoneNumber: string
    vatNumber: number
    status: string

    authToken?: string
}
