@startuml

skinparam component {
    FontSize 16
    BackgroundColor<<Apache>> LightCoral
    BorderColor<<Apache>> #FF6655
    FontName Courier
    BorderColor black
    BackgroundColor DeepSkyBlue
    ArrowFontName Impact
    ArrowColor #FF6655
}

package system {
    package "Infrastructure" {
        package "Routes" {
            class ClientRoute
        }

        package "Persistence" {
            interface IDBDriver
            class DBDriver
        }

        DBDriver -right-|> IDBDriver
    }

    package "Interface Adapters" {
        package "Controllers" {
            package "IControllers" {
                interface IClientController
            }

            package "ImplControllers" {
                class ClientController
            }
            ClientController -up-|> IClientController
        }

        package "Repositories" {
            class ClientRepo
        }

        ClientRepo .up.> DBDriver

        ClientRoute ..> IClientController
    }

    package "Application Services" {
        package "App Services" {
            package "IAppServices" {
                interface IClientAppService
            }

            package "ImplAppServices" {
                class ClientAppService
            }

            ClientAppService --|> IClientAppService

            package "IRepositories" {
                interface IClientRepo
            }

            ClientRepo --|> IClientRepo
        }

        ClientController ..> IClientAppService

        ClientAppService .up.> IClientRepo
    }

    package "Entities/Core/Domain" {
        package "Client" as a_building {
            class Client <<root>> <<entity>>
        }


        class UserEmail <<Value Object>>
        class UserName <<Value Object>>
        class UserPhoneNumber <<Value Object>>
        class ClientVatNumber <<Value Object>>
        class ClientStatus <<Value Object>>
        class UserPassword <<Value Object>>

        ClientAppService ..> Client

        Client ..> UserEmail
        Client ..> UserName
        Client ..> UserPhoneNumber
        Client ..> ClientVatNumber
        Client ..> ClientStatus
        Client ..> UserPassword
    }

    package "DTO" {
        interface IClientDTO
        interface ICreatedClientDTO
    }

    ClientAppService -up-> IClientDTO
    ClientController -up-> IClientDTO

    ClientAppService -up-> ICreatedClientDTO
    ClientController -up-> ICreatedClientDTO
}

@enduml

